<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.OrderPlacedActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/order_placed_01" />

    <TextView
        android:id="@+id/orderInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_place_info"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/continue_text" />
</LinearLayout>