<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/cartImage"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/default_image" />


            <TextView
                android:id="@+id/cartProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/cartImage"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/product_title_sample"
                android:textColor="#303030"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cartProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cartProductTitle"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/cartImage"
                android:padding="1dp"
                android:text="@string/product_price_sample"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cartProductTitle"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@id/cartProductPrice"
                android:padding="1dp"
                android:text="@string/product_price_sample"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/cartImage"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/cartImage"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minusBtn"
                        android:layout_width="34dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/minus"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/cartProductQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="1"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/plusBtn"
                        android:layout_width="41dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/plus"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/removeBtn"
                        android:layout_width="79dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/remove"
                        android:textAllCaps="false"
                        android:textColor="@color/purple_500"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>