<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/usernameEditView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/username_or_email"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passwordEditView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/username_or_email"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="10dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/gotoLoginBtn"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:padding="1dp"
                android:text="@string/register"
                android:textColor="@color/primary_light"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="10dp"
                android:text="Forgot password?"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/reset_password_btn"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="1dp"
                android:text="Reset"
                android:textColor="@color/primary_light"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonSize="wide" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>